2003-04-22  Claudiu Costin  <claudiuc@kde.org>

	* ro.po: update

2003-04-15  Claudiu Costin  <claudiuc@kde.org>

	* ro.po: update

2003-04-11  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* postats.sh (template): add entry for nynorsk

2003-04-11  Michael Schmitt  <Michael.Schmitt@teststep.org>

	* de.po: update

2003-04-11  Claudiu Costin  <claudiuc@kde.org>

	* ro.po: update

2003-04-11  Ingar Pareliussen <Ingar.Pareliussen@chembio.ntnu.no>

	* nn.po: new translation for nynorsk

2003-04-08  Tomasz Luczak  <tlu@technodat.com.pl>

	* pl.po: update

2003-04-07  Alfredo Braunstein  <abraunst@libero.it>

	* es.po: update

2003-04-07  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* fi.po: update

2003-04-03  Tomasz Luczak  <tlu@technodat.com.pl>

	* pl.po: update

2003-04-02  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* no.po: fix small typo

2003-03-27  Tino Meinen  <a.t.meinen@chello.nl>

	* nl.po: update

2003-03-24  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* postats.sh: fix URL to latest translations.

	* de.po: update from Michael Schmitt

2003-03-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* ru.po: update from Vitaly Lipatov

2003-03-17  Alfredo Braunstein <abraunst@libero.it>

	* es.po: small update

2003-03-10  Adrien Rebollo <adrien.rebollo@gmx.fr>

	* fr.po: update

2003-03-10  Michael Schmitt  <Michael.Schmitt@teststep.org>
	
	* pocheck.pl: new perl script that checks the consistency of a
	given po file

2003-03-10  Tino Meinen  <a.t.meinen@chello.nl>

	* nl.po: update

2003-03-10  Helge Hafting  <helgehaf@aitel.hist.no>

	* no.po: update

2003-03-10  Claus Hindsgaul  <claus_h@image.dk>

	* da.po: update

2003-03-10  Michael Schmitt  <Michael.Schmitt@teststep.org>
	
	* de.po: update

2003-03-07  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* *.po: remerge

2003-03-03  Helge Hafting  <helgehaf@aitel.hist.no>

	* no.po: update

2003-02-27  Adrien Rebollo <adrien.rebollo@gmx.fr>

	* fr.po: update

2003-02-20  Tomasz Luczak  <tlu@technodat.com.pl>
