@@ -1,3 +1,8 @@
+2003-04-28  Michael Schmitt  <Michael.Schmitt@teststep.org>
+
+	* pocheck.pl: do not output several different messages about bad
+	translation for the same word.
+
 2003-04-22  Claudiu Costin  <claudiuc@kde.org>
 
 	* ro.po: update
